Team details Added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	 <center><h1>Welcome to EnCube Fablab Documentation Website</h1> <br>
 
-	 	<a href="workshops">Workshops</a>     |     Members     |     Team <br>
+	 	<a href="workshops">Workshops</a>     |     Members     |     <a href="team">Team</a> <br>
 
 
 	 	Follow us on
