--- a/workshops/index.html
+++ b/workshops/index.html
@@ -6,7 +6,7 @@
 <body>
 	 <center><h1>EnCube Fablab Workshops</h1> <br>
 
-	 	<h3><a href="workshops">Workshops</a></h3> <br>  
+	 	<h3><a href="#">Workshops</a></h3> <br>  
 
 	 	<ol>
 	 		<li><a href="z2m-baw-03feb19">Basic Arduino Workshops</a>    |    03 Feb 19    |    <a href="https://photos.app.goo.gl/HZdh3PQJ6d6cPbnH7">Photos</a></li>
