--- a/workshops/index.html
+++ b/workshops/index.html
@@ -10,6 +10,8 @@
 
 	 	<ol>
 	 		<li><a href="z2m-baw-03feb19">Basic Arduino Workshops</a>    |    03 Feb 19    |    <a href="https://photos.app.goo.gl/HZdh3PQJ6d6cPbnH7">Photos</a></li>
+	 		<li><a href="z2m-baw-10feb19">Basic Arduino Workshops</a>    |    10 Feb 19    |    
+
 	 	</ol>
 
 
