--- a/team/index.html
+++ b/team/index.html
@@ -8,14 +8,17 @@
 
 <h2>Manager</h2><br>
 
-Malati Saidava <br>
+Dhruv Saidava <br>
 
 <h2>Mentors</h2><br>
+Tapan Betai
 
-Rutuja Patel     |     Jay Munjani     |     Maharshi Solanki <br>
+
 <h2>Trainee</h2> <br>
 
-Aman Patel     |     Rutvi Shah    |     Sachin Patel <br>
+<a href="amanap24.github.io">Aman Patel</a>     |     <a href="rutvi271.github.io">Rutvi Shah</a>    |     Sachin Patel <br>
+<a href="http://rutuja.me">Rutuja Patel</a>     |     <a href="jmunjani.github.io">Jay Munjani</a>     |     <a href="http://maharshi.me">Maharshi Solanki </a><br>
+<a href="mrugipanchal.github.io">Mrugesha Panchal</a>     |     <a href="maltisaidava.me">Malati Saidava</a>     |     <a href="http://japarejiya.github.io">Jaydeep Parejiya</a>
 
 
 <br>
