Web error solve

--- a/team/index.html
+++ b/team/index.html
@@ -16,9 +16,9 @@ Tapan Betai
 
 <h2>Trainee</h2> <br>
 
-<a href="amanap24.github.io">Aman Patel</a>     |     <a href="rutvi271.github.io">Rutvi Shah</a>    |     Sachin Patel <br>
-<a href="http://rutuja.me">Rutuja Patel</a>     |     <a href="jmunjani.github.io">Jay Munjani</a>     |     <a href="http://maharshi.me">Maharshi Solanki </a><br>
-<a href="mrugipanchal.github.io">Mrugesha Panchal</a>     |     <a href="maltisaidava.me">Malati Saidava</a>     |     <a href="http://japarejiya.github.io">Jaydeep Parejiya</a>
+<a href="http://amanap24.github.io">Aman Patel</a>     |     <a href="http://rutvi271.github.io">Rutvi Shah</a>    |     Sachin Patel <br>
+<a href="http://rutuja.me">Rutuja Patel</a>     |     <a href="http://jmunjani.github.io">Jay Munjani</a>     |     <a href="http://maharshi.me">Maharshi Solanki </a><br>
+<a href="http://mrugipanchal.github.io">Mrugesha Panchal</a>     |     <a href="http://maltisaidava.me">Malati Saidava</a>     |     <a href="http://japarejiya.github.io">Jaydeep Parejiya</a>
 
 
 <br>
