--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>EnCube Fablab Documentation</title>
+	<title>EnCube Fablab </title>
 </head>
 <body>
-	 <center><h1>Welcome to EnCube Fablab Documentation Website</h1> <br>
+    <center><h1> EnCube Fablab </h1>
+    Work in progress....</center>
 
-	 	<a href="workshops/">Workshops</a>     |     Members     |     <a href="team/">Team</a> <br>
-
-
-	 	Follow us on
-
-	 		<a href="https://fb.com/encubelabs">Facebook</a>    |    <a href="https://twitter.com/encubelabs">Twitter</a>    |    <a href="https://instagram.com/encubelabs">Instagram</a>
-
-	 	</center>
 
 
 
